# boomerang

CVSROOT/: avail  (+1 more)
boomerang/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  README  binutils.m4  boomerang-win.sln  boomerang-win.vcxproj  boomerang-win.vcxproj.filters  boomerang.cpp  boomerang.rc  boomerang.sln  boomerang.vcxproj  boomerang.vcxproj.filters  boomerang_vs2005.vcproj  bootstrap  configure  configure.ac  configure.in  dbl_shared.cpp  driver.cpp  functest.sh  log.cpp  qtgui2.sln  qtgui2_vs2005.sln  resource.h  testAll.cpp  testOne.sh  windows.cpp
boomerang/Boomerang.xcodeproj/: project.pbxproj
boomerang/analysis/: AnalysisTest.cpp  Makefile.in  analysis.cpp  testAnalysis.cpp
boomerang/c/: CMakeLists.txt  CTest.cc  CTest.cpp  CTest.h  Makefile  ansi-c-parser.cpp  ansi-c-parser.h  ansi-c-scanner.cpp  ansi-c-scanner.h  ansi-c.l  ansi-c.y
boomerang/cmake_scripts/: BOOMERANG_Macros.cmake  FindBisonpp.cmake  FindBoehmGC.cmake  FindCppUnit.cmake  FindFlexpp.cmake
boomerang/codegen/: CMakeLists.txt  chllcode.cpp  chllcode.h  syntax.cpp
boomerang/db/: .Makefile.swp  CMakeLists.txt  CfgTest.cpp  CfgTest.h  DataflowTest.cpp  DataflowTest.h  DfaTest.cpp  DfaTest.h  ExpTest.cc  ExpTest.cpp  ExpTest.h  Makefile  Makefile.in  ParserTest.cc  ParserTest.cpp  ParserTest.h  ProcTest.cc  ProcTest.cpp  ProcTest.h  ProgTest.cc  ProgTest.cpp  ProgTest.h  RtlTest.cc  RtlTest.cpp  RtlTest.h  StatementTest.cpp  StatementTest.h  TypeTest.cpp  basicblock.cc  basicblock.cpp  cfg.cc  cfg.cpp  checkstrings.cpp  dataflow.cpp  dom.cpp  exp.cc  exp.cpp  hrtl.cc  hrtl.cpp  insnameelem.cpp  (+39 more)
boomerang/frontend/: CMakeLists.txt  FrontPentTest.cc  FrontPentTest.cpp  FrontPentTest.h  FrontSparcTest.cc  FrontSparcTest.cpp  FrontSparcTest.h  FrontendTest.cc  FrontendTest.cpp  FrontendTest.h  Makefile.in  frontend.cc  frontend.cpp  mipsdecoder.cpp  mipsdecoder.h  mipsfrontend.cpp  mipsfrontend.h  njmcDecoder.cc  njmcDecoder.cpp  pentiumdecoder.cpp  pentiumdecoder.h  pentiumfrontend.cpp  pentiumfrontend.h  ppcdecoder.cpp  ppcdecoder.h  ppcfrontend.cpp  ppcfrontend.h  sparcdecoder.cpp  sparcdecoder.h  sparcfrontend.cpp  sparcfrontend.h  st20decoder.cpp  st20decoder.h  st20frontend.cpp  st20frontend.h  switch.cpp  testFront.cc  testFront.cpp
boomerang/frontend/machine/: CMakeLists.txt
boomerang/gui/: Preferences.cpp  boomerang.h
boomerang/include/: BinaryFile.h  BinaryFileStub.h  SymbolMatcher.h  analysis.h  basicblock.h  boomerang.h  cfg.h  cluster.h  common.hs  config.h.cmake  config.h.in  constraint.h  coverage.h  dataflow.h  decoder.h  exp.h  exphelp.h  frontend.h  hllcode.h  log.h  managed.h  memo.h  operator.h  proc.h  prog.h  register.h  rtl.h  sigenum.h  signature.h  statement.h  transformer.h  type.h  types.h  util.h  visitor.h  xmlprogparser.h
boomerang/interface/: BinaryFile.h  decl.h  exp.h  func.h  index.h  scope.h  stmt.h  type.h
boomerang/libltdl/: Makefile.in
boomerang/loader/: ArchiveFile.cpp  BinaryFile.cpp  BinaryFileFactory.cpp  BinaryFileStub.cpp  CMakeLists.txt  DOS4GWBinaryFile.cpp  DOS4GWBinaryFile.h  ElfArchiveFile.cpp  ElfBinaryFile.cc  ElfBinaryFile.cpp  ElfBinaryFile.h  ElfDetails.h  ExeBinaryFile.cpp  ExeBinaryFile.h  HpSomBinaryFile.cc  HpSomBinaryFile.cpp  HpSomBinaryFile.h  IntelCoffFile.cpp  IntelCoffFile.h  LoaderTest.cc  LoaderTest.cpp  LoaderTest.h  MachOBinaryFile.cpp  MachOBinaryFile.h  Makefile.am  Makefile.in  PalmBinaryFile.cpp  PalmBinaryFile.h  SymTab.cc  SymTab.cpp  SymTab.h  Win32BinaryFile.cpp  Win32BinaryFile.h  bffDump.cc  bffDump.cpp  macho-apple.h  microX86dis.c  nlist.h  palmsystraps.h  syself.h  (+2 more)
boomerang/loader/objc/: List.h  Object.h  Protocol.h  error.h  hashtable.h  hashtable2.h  malloc.h  objc-api.h  objc-class.h  objc-load.h  objc-runtime.h  objc.h  zone.h
boomerang/nbproject/: Makefile-Default.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Default.bash  configurations.xml  project.xml
boomerang/qtgui/: detailswidget.cpp  detailswidget.h  moc_detailswidget.cpp  moc_filemonitor.cpp  moc_mainform.cpp
boomerang/qtgui2/: DecompilerThread.cpp  DecompilerThread.h  UpgradeLog.XML  main.cpp  mainwindow.cpp  mainwindow.h  mypthread.cpp  qtgui2.sln  qtgui2.vcxproj  qtgui2.vcxproj.filters  rtleditor.cpp  rtleditor.h
boomerang/signatures/: ctype.h  gcc_pent.h  getopt.h  gl.h  mfc.h  netdb.h  ntddk.h  ntifs.h  objc.hs  pwd.h  socket.h  stat_pent.h  stat_ppc.h  stat_sparc.h  stdio.h  stdlib.h  string.h  termios.h  time.h  uname_pent.h  utmp.h  windows.h  xf86.h
boomerang/symbols/: BfdArchMatcher.cpp  BfdArchMatcher.h  BfdObjMatcher.cpp  BfdObjMatcher.h  BytePattern.cpp  BytePattern.h  DynLibMatcher.cpp  DynLibMatcher.h  LibSigMatcher.cpp  LibSigMatcher.h  SignatureGenerator.cpp  SignatureGenerator.h  SymbolMatcher.cpp  libidloader.cpp  libidloader.h
boomerang/test/source/: andn.c  banner.c  branch.c  bswap.c  condcodexform.c  daysofxmas.c  elf_hash_original.c  fbranch.c  fbranch2.c  fib.c  fibo.c  fibo2.c  fibo_iter.c  fromssa2.c  frontier.c  funcptr.c  hello.c  hello.cpp  ifthen.c  line1.c  manyparams.c  minmax.c  minmax2.c  nestedswitch.c  param1.c  phi.c  phi2.c  printpi.c  recursion.c  recursion2.c  regalias.c  regalias2.c  semi.c  set.c  short1.c  short2.c  stattest.c  sumarray.c  superstat.c  switch.c  (+7 more)
boomerang/testsuite/: Makefile  README  run_boomerang.sh  site.exp
boomerang/testsuite/boomerang.func/: functests.exp
boomerang/testsuite/boomerang.minor/: cli.exp
boomerang/transform/: CMakeLists.txt  Makefile.am  Makefile.in  generic.cpp  generic.h  rdi.cpp  rdi.h  transformation-parser.cpp  transformation-parser.h  transformation-scanner.cpp  transformation-scanner.h  transformation.l  transformation.y  transformer.cpp
boomerang/type/: CMakeLists.txt  TypeTest.cpp  TypeTest.h  constraint.cpp  dfa.cpp  type.cpp
boomerang/util/: CMakeLists.txt  Makefile.am  Makefile.in  UtilTest.cc  UtilTest.cpp  UtilTest.h  testUtil.cpp  type.cc  util.cc  util.cpp
boomerang/win32make/: boomerang.dsp  boomerang.dsw  boomerang.sln  boomerang_VC5.dsp  boomerang_VC5.dsw  gcc.sln  gcc.vcproj  gcc.vcxproj  gcc.vcxproj.filters
(+92 files in other folders)
