######################################################
# File: Makefile
# Desc: Makefile for the utilities (util) directory
#       Makes and tests the libutil.so library
#
######################################################

# $Revision: 1.6 $
# 09 Apr 02 - Mike: Created.
# 10 Apr 02 - Mike: interface -> include; added util.cpp (for str())
# 11 Apr 02 - Mike: target is now ../lib/libutil so can use -lutil
# 28 Apr 02 - Mike: Make library from .o not .cpp
# 15 jun 08 - Markus: convert to autotools


